# nanoslides

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: gemini-3-pro.md  slides-json-schema.md
presentations/historia/: slides.json
src/nanoslides/: __init__.py  __main__.py
src/nanoslides/cli/: __init__.py  errors.py  image_store.py  main.py  reference_files.py
src/nanoslides/cli/commands/: __init__.py  clearall.py  edit.py  export.py  generate.py  init.py  move.py  presentation.py  remove.py  setup.py  style.py
src/nanoslides/core/: __init__.py  config.py  export.py  interfaces.py  presentation.py  project.py  provider_errors.py  style.py  style_steal.py
src/nanoslides/engines/: __init__.py  nanobanana.py
src/nanoslides/utils/: __init__.py  logger.py
tests/: slides.yaml  test_clearall_command.py  test_export.py  test_style_generate.py  test_use_cases.py  use-cases.md
